--- a/requirements.txt
+++ b/requirements.txt
@@ -26,7 +26,7 @@ albumentations>=1.3.0
 scikit-image>=0.21.0
 
 # SAM (Segment Anything)
-segment-anything @ git+https://github.com/facebookresearch/segment-anything.git
+# segment-anything @ git+https://github.com/facebookresearch/segment-anything.git
 
 # Depth Estimation
 # depth-anything installed via transformers
