--- a/requirements.txt
+++ b/requirements.txt
@@ -20,7 +20,8 @@ diffusers>=0.24.0
 safetensors>=0.4.0
 
 # Image Processing
-opencv-python>=4.8.0
+# Use headless version for cloud deployment (no GUI dependencies)
+opencv-python-headless>=4.8.0
 Pillow>=10.0.0
 albumentations>=1.3.0
 scikit-image>=0.21.0
